--- a/podcasts.html
+++ b/podcasts.html
@@ -51,18 +51,26 @@
                   <img src="/images/podcast_img/Episode 9.png" />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <!-- ----- -->
             <div class="podCard">
@@ -73,18 +81,26 @@
                   />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <!-- ----- -->
             <div class="podCard">
@@ -93,18 +109,26 @@
                   <img src="/images/podcast_img/Episode 10.png" />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="podCard">
               <div class="content">
@@ -112,18 +136,26 @@
                   <img src="/images/podcast_img/Episode 10.png" />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <!--  -->
             <div class="podCard">
@@ -132,18 +164,26 @@
                   <img src="/images/podcast_img/Episode 10.png" />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="podCard">
               <div class="content">
@@ -151,18 +191,26 @@
                   <img src="/images/podcast_img//Episode 9.png" />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <!--  -->
             <div class="podCard">
@@ -171,18 +219,26 @@
                   <img src="/images/podcast_img//Episode 9.png" />
                 </div>
               </div>
-              <ul class="ctaIcons">
+              <div class="ctaIcons">
                 <h4>listen</h4>
-                <li class="cta_icon">
-                  <a href="">Apple Podcasts</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Spotify</a>
-                </li>
-                <li class="cta_icon">
-                  <a href="">Youtube</a>
-                </li>
-              </ul>
+                <ul class="cta_list">
+                  <li class="cta_icon">
+                    <a href="">
+                      <img src="/images/logos/youtube.png" alt="" />
+                    </a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/spotify.png" alt=""
+                    /></a>
+                  </li>
+                  <li class="cta_icon">
+                    <a href=""
+                      ><img src="/images/logos/apple-pod.png" alt=""
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <!--  -->
           </div>
