--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,6 @@
 
     <link rel="stylesheet" href="css/projects.css" />
     <link rel="stylesheet" href="css/main.css" rel="stylesheet" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-    />
   </head>
   <body>
     <div class="heroSection projects">
@@ -40,14 +35,14 @@
           </p>
         </div>
         <div class="projSlider">
-          <div class="slider owl-carousel">
+          <div class="cardList">
             <div class="mainCard">
               <div class="img">
                 <img src="images/project_img/v255_54.png" alt="" />
               </div>
               <div class="content">
                 <div class="title">Project title</div>
-                <!-- <-- <div class="sub-title">Graphic Designer</div> -- -->
+
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
                   modi dolorem quis quae animi nihil minus sed unde voluptas
@@ -65,7 +60,7 @@
               </div>
               <div class="content">
                 <div class="title">Project title</div>
-                <!-- <-- <div class="sub-title">Web Developer</div> -- -->
+
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
                   modi dolorem quis quae animi nihil minus sed unde voluptas
@@ -82,7 +77,7 @@
               </div>
               <div class="content">
                 <div class="title">Project title</div>
-                <!-- <-- <div class="sub-title">App Developer</div> -- -->
+
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
                   modi dolorem quis quae animi nihil minus sed unde voluptas
@@ -132,19 +127,5 @@
         <p>EHS Unplugged Podcast 2024</p>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script>
-      $(".slider").owlCarousel({
-        loop: true,
-        autoplay: true,
-        autoplayTimeout: 4000, // 3000ms = 3s
-        autoplayHoverPause: true,
-        animateOut: "fadeOut", // Fade out animation
-        animateIn: "fadeIn", // Fade in animation
-        smartSpeed: 1000, // Transition speed in milliseconds (adjust as needed)
-        animateEasing: "easeInOut", // Easing function for the animation
-      });
-    </script>
   </body>
 </html>
