--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="mainNav">
           <div class="logo">
             <a href="index.html"
-              ><img class="logoIcon" src="/images/logo.png"
-            /></a>
+              ><img class="logoIcon" src="/images/nlogo.png" />
+            </a>
           </div>
           <div class="navItems">
             <ul class="NavLinks">
@@ -45,19 +45,21 @@
               </p>
             </div>
             <div class="arrowDown">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 64 64"
-                stroke-width="2.5"
-                stroke="#CACBD2"
-                fill="none"
-                class="duration-300 transform transition-all"
-                style="width: 48px; height: 58px"
-              >
-                <path
-                  d="M32.4 54.7V9.25M50.41 37.47L32.25 54.7 15.71 37.47"
-                ></path>
-              </svg>
+              <a href="#aboutSection">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 64 64"
+                  stroke-width="2.5"
+                  stroke="#CACBD2"
+                  fill="none"
+                  class="duration-300 transform transition-all"
+                  style="width: 48px; height: 58px"
+                >
+                  <path
+                    d="M32.4 54.7V9.25M50.41 37.47L32.25 54.7 15.71 37.47"
+                  ></path>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
@@ -101,20 +103,85 @@
     <!-- ======================== -->
     <!-- <img class="QuoteBg" src="/images/v257_140.png" /> -->
     <div class="podQuote">
-      <p>
-        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat”
-      </p>
+      <div class="quoteBG">
+        <p>
+          “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat”
+        </p>
+      </div>
     </div>
     <!-- =============================== -->
     <div class="footer">
       <div class="contactSection">
         <div class="Socials">
-          <div class="socials_icon"></div>
-          <div class="socials_icon"></div>
-          <div class="socials_icon"></div>
+          <div class="socials_icon youtube">
+            <a href="#">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 64 64"
+                stroke-width="2.5"
+                stroke="#CACBD2"
+                fill="none"
+                class="duration-300 transform transition-all"
+                style="width: 48px; height: 48px"
+              >
+                <path
+                  d="M34.34 24.1h-8.69v31.43h9v-14.4c0-3.82.72-7.49 5.43-7.49s4.72 4.34 4.72 7.73v14.16h9V39.46c0-7.76-1.65-14.92-10.81-14.92-3.38-.13-6.65.49-8.47 3.25a.11.11 0 01-.21-.06zM10.92 24.1H20v31.43h-9.08zM15.44 8.47a5.27 5.27 0 105.25 5.29v0a5.25 5.25 0 00-5.25-5.29z"
+                  stroke-linecap="round"
+                ></path>
+              </svg>
+            </a>
+          </div>
+          <div class="socials_icon">
+            <a href="#">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 64 64"
+                stroke-width="2.5"
+                stroke="#CACBD2"
+                fill="none"
+                class="duration-300 transform transition-all"
+                style="width: 48px; height: 48px"
+              >
+                <path
+                  d="M54.49 12.3c0-.1-.09-.16-.17-.09-1.57 1.36-5.36 2.46-5.84 2.51a.11.11 0 01-.09 0c-2.78-4.44-9.19-3.24-9.19-3.24C29.78 13.48 30.82 23 31 24c0 .05 0 .09-.09.09-10.48.52-19.63-9.22-20.67-10.37a.11.11 0 00-.17 0A10.57 10.57 0 0012.78 27a.11.11 0 010 .19 12.87 12.87 0 01-4-.77c-.06 0-.13 0-.13.1.14 6.2 6.22 9 7.63 9.59a.1.1 0 010 .19 13.4 13.4 0 01-3.85.27.11.11 0 00-.11.14c1.27 4.78 7.5 6.78 8.62 7.11A.11.11 0 0121 44c-3.85 3.44-11.44 4.35-13 4.51a.11.11 0 00-.06.19c5.82 4 21.06 7.32 32.7-2.63A30.3 30.3 0 0051 21.83a.09.09 0 01.05-.08 14.22 14.22 0 005.06-5.06c0-.1 0-.16-.15-.13a5.63 5.63 0 01-3.15.17s1.71-2.96 1.68-4.43z"
+                  stroke-linecap="round"
+                ></path>
+              </svg>
+            </a>
+          </div>
+
+          <div class="socials_icon">
+            <a href="#">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 64 64"
+                stroke-width="2.5"
+                stroke="#CACBD2"
+                fill="none"
+                class="duration-300 transform transition-all"
+                style="width: 48px; height: 48px"
+              >
+                <rect
+                  x="13.8"
+                  y="13.02"
+                  width="36.4"
+                  height="37.97"
+                  rx="10.53"
+                  stroke-linecap="round"
+                ></rect>
+                <circle
+                  cx="32"
+                  cy="32"
+                  r="9.28"
+                  stroke-linecap="round"
+                ></circle>
+                <circle cx="43.11" cy="19.74" r="1.32"></circle>
+              </svg>
+            </a>
+          </div>
         </div>
         <div class="Contacts">
           <div class="Mail">Lorem@ipsum.com</div>
