--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="footer">
       <div class="contactSection">
         <div class="Socials">
-          <div class="socials_icon youtube">
+          <div class="socials_icon">
             <a href="#">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -189,7 +189,7 @@
         </div>
       </div>
 
-      <div class="Copyright">
+      <div class="copyright">
         <p>EHS Unplugged Podcast 2024</p>
       </div>
     </div>
