--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
       </div>
       <div class="mainHero projHero">
         <div class="projectsTitle">
-          <div class="title">What we've done</div>
+          <div class="projTitle">What we've done</div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. modi
             dolorem quis quae animi nihil minus sed unde voluptas cumque.
