--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
           <div class="cardList">
             <div class="mainCard">
               <div class="img">
-                <img src="images/project_img/v255_54.png" alt="" />
+                <img src="images/project_img//v255_54.jpg" alt="" />
               </div>
               <div class="content">
                 <div class="title">Project title</div>
@@ -57,7 +57,7 @@
 
             <div class="mainCard">
               <div class="img">
-                <img src="/images/project_img/v255_55.png" alt="" />
+                <img src="/images/project_img/v255_55.jpg" alt="" />
               </div>
               <div class="content">
                 <div class="title">Project title</div>
@@ -75,7 +75,7 @@
 
             <div class="mainCard">
               <div class="img">
-                <img src="/images/project_img//v255_53.png" alt="" />
+                <img src="/images/project_img/v255_53.jpg" alt="" />
               </div>
               <div class="content">
                 <div class="title">Project title</div>
@@ -92,7 +92,7 @@
             </div>
             <div class="mainCard">
               <div class="img">
-                <img src="/images/project_img//v255_53.png" alt="" />
+                <img src="/images/project_img/v255_53.jpg" alt="" />
               </div>
               <div class="content">
                 <div class="title">Project title</div>
@@ -110,7 +110,7 @@
 
             <div class="mainCard">
               <div class="img">
-                <img src="/images/project_img//v255_53.png" alt="" />
+                <img src="/images/project_img/v255_54.jpg" alt="" />
               </div>
               <div class="content">
                 <div class="title">Project title</div>
