--- a/projects.html
+++ b/projects.html
@@ -208,7 +208,7 @@
         </div>
       </div>
 
-      <div class="Copyright">
+      <div class="copyright">
         <p>EHS Unplugged Podcast 2024</p>
       </div>
     </div>
