--- a/podcasts.html
+++ b/podcasts.html
@@ -324,7 +324,7 @@
         </div>
       </div>
 
-      <div class="Copyright">
+      <div class="copyright">
         <p>EHS Unplugged Podcast 2024</p>
       </div>
     </div>
